<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ads_banner">

        </com.google.android.gms.ads.AdView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_nhietdomau"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/temperature"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/_15sdp" />

                            <TextView
                                android:id="@+id/tv_temperature_color"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"

                                android:text="2000K"
                                android:textColor="#80000000"
                                android:textSize="@dimen/_25sdp" />

                            <ImageView
                                android:id="@+id/img_slide"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_help_red_24dp" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:orientation="horizontal">

                        </androidx.recyclerview.widget.RecyclerView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intensity"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/_15sdp" />

                            <TextView
                                android:id="@+id/tv_opacity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"

                                android:text="33%"
                                android:textColor="#80000000"
                                android:textSize="@dimen/_25sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_tonality_black_24dp" />

                            <SeekBar
                                android:id="@+id/seekbar_opacity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:max="204" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/brightness"
                                android:textColor="@android:color/black"
                                android:textSize="@dimen/_15sdp" />

                            <TextView
                                android:id="@+id/tv_brightness"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"

                                android:text="33%"
                                android:textColor="#80000000"
                                android:textSize="@dimen/_25sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_brightness_6_black_24dp" />

                            <SeekBar
                                android:id="@+id/seekbar_brightness"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:max="255" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_15sdp">

                            <ImageView
                                android:id="@+id/img_timepicker"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_timer_black_24dp" />

                            <TextView
                                android:id="@+id/tv_turn_off_time"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_toRightOf="@id/img_timepicker"
                                android:text="@string/automatic_time"
                                android:textColor="@android:color/black" />

                            <LinearLayout
                                android:id="@+id/ll_turn_on_time"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/img_timepicker"
                                android:orientation="horizontal"
                                android:visibility="gone">

                                <TextView
                                    android:id="@+id/tv_on_timepicker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="@dimen/_10sdp"
                                    android:text="BẬT 10:00 PM"
                                    android:textColor="#319635" />

                                <View
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_margin="@dimen/_5sdp"
                                    android:background="#000000" />

                                <TextView
                                    android:id="@+id/tv_off_timepicker"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="TẮT 7:00 AM"
                                    android:textColor="#DB0C0C" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/switchTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true" />
                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/notification_bar"
                            android:textColor="#000000"
                            android:textSize="@dimen/_15sdp" />

                        <TextView
                            android:id="@+id/tv_on_off"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:text="@string/status_on"
                            android:textColor="#80000000"
                            android:textSize="@dimen/_25sdp" />

                        <Switch
                            android:id="@+id/switchNotification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>



        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>